<resources>
    <string name="app_name">PlantYourWork</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="login_image">login_image</string>
    <string name="ingrese_su_usuario">Ingrese su usuario</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesion_btn">Iniciar sesion</string>
</resources>