<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.fragments.loginForm.LoginFormFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/iniciar_sesion"
                android:layout_weight="1"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/login_image"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/login_image" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputUsernameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            app:boxStrokeColor="@color/button_login_background"
            app:hintTextColor="@color/button_login_background"
            android:hint="@string/ingrese_su_usuario">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionNext"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            app:boxStrokeColor="@color/button_login_background"
            app:hintTextColor="@color/button_login_background"
            android:hint="@string/ingrese_su_contrase_a">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgotPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/olvidaste_tu_contrase_a"
            android:layout_marginTop="16sp"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesion_btn"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/button_login_background"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true" />

        <Button
            android:id="@+id/registerButtonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/button_register_background"
            android:textColor="@color/button_login_background"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>