<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.login.fragments.registerForm.RegisterFragment">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="back_btn" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Registrarse"
                android:layout_weight="1"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/login_image"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/login_image" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputUsernameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            app:boxStrokeColor="@color/button_login_background"
            app:hintTextColor="@color/button_login_background"
            android:hint="@string/ingrese_su_usuario">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:importantForAutofill="auto"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputNameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            app:boxStrokeColor="@color/button_login_background"
            app:hintTextColor="@color/button_login_background"
            android:hint="Ingrese su nombre">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:importantForAutofill="auto"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEmailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            app:boxStrokeColor="@color/button_login_background"
            app:hintTextColor="@color/button_login_background"
            android:hint="Ingrese su correo">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:importantForAutofill="auto"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            app:boxStrokeColor="@color/button_login_background"
            app:hintTextColor="@color/button_login_background"
            android:hint="Ingrese su contraseña">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:importantForAutofill="auto"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/button_register_background"
            android:textColor="@color/button_login_background"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>